--- a/example-web-jsf-servlet/src/main/webapp/stylesheets/ajax_demo.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/stylesheets/ajax_demo.xhtml
@@ -7,25 +7,34 @@
 	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:e="http://commons.esup-portail.org"
 	template="/stylesheets/template.xhtml">
-<ui:define name="content">
-	
-	
-	<e:section value="#{msgs['AJAX_DEMO.TITLE']}" />
-	<t:htmlTag value="br" />
-	<h:outputText value="#{msgs['AJAX_DEMO.DESCRIPTION']}" escape="false" />
-	<t:htmlTag value="br" />
-	<t:htmlTag value="hr" />
-	<t:htmlTag value="br" />
-	<e:subSection id="simple" value="#{msgs['AJAX_DEMO.SIMPLE']}" />
-	<t:htmlTag value="br" />
-	<h:form id="myform1">
-		<h:panelGrid columns="2">
-			<h:inputText id="firstname" value="#{simpleController.name} NE FAIT RIEN POUR LE MOMENT CHOISIR LIBRAIRIE">
-			</h:inputText>
-			<h:outputText id="out1" value="#{simpleController.name}" />
-		</h:panelGrid>
-	</h:form>
-</ui:define>
+	<ui:define name="content">
+
+
+		<e:section value="#{msgs['AJAX_DEMO.TITLE']}" />
+		<br />
+		<h:outputText value="#{msgs['AJAX_DEMO.DESCRIPTION']}" escape="false" />
+		<br />
+		<hr />
+		<br />
+		<p:fieldset legend="#{msgs['AJAX_DEMO.SIMPLE']}">
+			<h:form id="myform1">
+				<h:panelGrid columns="2">
+					<p:inputText id="firstname" value="#{simpleController.name}">
+						<f:ajax event="keyup" render="out1" />
+					</p:inputText>
+					<h:outputText id="out1" value="#{simpleController.name}" />
+				</h:panelGrid>
+			</h:form>
+		</p:fieldset>
+		<br />
+		<br />
+		<p:fieldset legend="#{msgs['AJAX_DEMO.AUTOCOMPLETE']}">
+			<h:form id="form">
+				<p:autoComplete id="searchUser" value="#{simpleController.idUser}"
+					completeMethod="#{simpleController.complete}" />
+			</h:form>
+		</p:fieldset>
+	</ui:define>
 </ui:composition>
 
 
