--- a/example-web-jsf-servlet/src/main/webapp/stylesheets/exception_demo.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/stylesheets/exception_demo.xhtml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:t="http://myfaces.apache.org/tomahawk"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:e="http://commons.esup-portail.org"
 	template="/stylesheets/template.xhtml">
 	<ui:define name="content">
 		<e:section value="#{msgs['EXCEPTION_DEMO.TITLE']}" />
-		<t:htmlTag value="br" />
+		<br />
 		<h:outputText value="#{msgs['EXCEPTION_DEMO.DESCRIPTION']}"
 			escape="false" />
-		<t:htmlTag value="br" />
-		<t:htmlTag value="hr" />
-		<t:htmlTag value="br" />
+		<br/>
+		<hr />
+		<br />
 		<e:subSection value="#{msgs['EXCEPTION_DEMO.TITLE']}" />
 		<h:form id="myform2">
-			<h:commandButton value="#{msgs['EXCEPTION_DEMO.BUTTON.TEST']}"
+			<p:commandButton value="#{msgs['EXCEPTION_DEMO.BUTTON.TEST']}"
 				action="#{welcomeController.testException}" />
 		</h:form>
 	</ui:define>
