--- a/example-web-jsf-servlet/src/main/webapp/stylesheets/jpa_demo.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/stylesheets/jpa_demo.xhtml
@@ -8,13 +8,11 @@
 	template="/stylesheets/template.xhtml">
 	<ui:define name="content">
 		<e:section value="#{msgs['JPA_DEMO.TITLE']}" />
-		<t:div id="messages" styleClass="messageForUser">
-			<e:messages showDetail="true" showSummary="true"/>
-		</t:div>
+		<p:growl id="growl" showDetail="true" />
 		<t:htmlTag value="br" />
 		<e:subSection value="#{msgs['JPA_DEMO.TITLE.ADD_USER']}" />
 		<t:htmlTag value="br" />
-		<h:form id="myform4">
+		<h:form id="formAddUser">
 			
 			<!-- Exemple component facelet cf WEB-INF/jsf/components/rowInput.xhtml -->
 			<e:ul styleClass="fl-controls-left fl-container-700">
@@ -23,19 +21,17 @@
 				<e:rowInput id="displayName" label="displayName :" size="30"
 					maxlength="100" text="#{userBean.displayName}" />
 			</e:ul>
-			<t:htmlTag value="hr" />
-			<t:htmlTag value="br" />
-			<h:commandButton value="add" action="#{welcomeController.addUser}"/>
-			<h:commandButton value="cancel" action="#{welcomeController.reset}" />
+			<hr/>
+			<br />
+			<p:commandButton value="add" action="#{welcomeController.addUser}" update="growl,formAddUser,myform3"/>
+			<p:commandButton value="cancel" action="#{userBean.reset}" update="formAddUser"/>
 		</h:form>
-		<t:htmlTag value="br" />
-		<t:htmlTag value="hr" />
-		<t:htmlTag value="br" />
+		<br/>
+		<hr/>
+		<br/>
 		<h:form id="myform3">
-			<h:dataTable id="tableUser" value="#{welcomeController.users}"
-				var="user" styleClass="paginatorData"
-				rowClasses="paginatorData-text,paginatorData-alternate"
-				headerClass="paginatorData-header">
+			<p:dataTable id="tableUser" value="#{welcomeController.users}"
+				var="user" >
 				<f:facet name="header">
 					<e:paginator id="paginatorUser" paginator="#{userPaginator}"
 						itemsName="Utilisateurs" reRender="myform3" />
@@ -45,39 +41,39 @@
 						itemsName="Utilisateurs" itemsNumbersFlag="#{false}"
 						itemsPerPageFlag="#{false}" reRender="myform3" />
 				</f:facet>
-				<h:column>
+				<p:column>
 					<f:facet name="header">
 						<h:outputText value="uid" />
 					</f:facet>
 					<h:outputText value="#{user.id}" />
-				</h:column>
-				<h:column>
+				</p:column>
+				<p:column>
 					<f:facet name="header">
 						<h:outputText value="User" />
 					</f:facet>
 					<h:outputText value="#{user.displayName}" />
-				</h:column>
-				<h:column>
+				</p:column>
+				<p:column>
 					<f:facet name="header">
 						<h:outputText value="Informations" />
 					</f:facet>
 					<ui:repeat value="#{user.informations}" var="information">
 						<h:outputText
 							value="#{information.informationKey} - #{information.informationValue}" />
-						<t:htmlTag value="br" />
+						<br/>
 					</ui:repeat>
-				</h:column>
-				<h:column>
+				</p:column>
+				<p:column>
 					<f:facet name="header">
 						<h:outputText value="Action" />
 					</f:facet>
-					<h:commandButton value="delete"
+					<p:commandButton value="delete" update="growl,formAddUser,myform3"
 						action="#{welcomeController.deleteUser}" >
 						<f:setPropertyActionListener value="#{user}"
 							target="#{welcomeController.deletableUser}" />
-					</h:commandButton>
-				</h:column>
-			</h:dataTable>
+					</p:commandButton>
+				</p:column>
+			</p:dataTable>
 
 		</h:form>
 		<t:div style="clear:both;" />
