--- a/example-web-jsf-servlet/src/main/webapp/stylesheets/simpleTemplate.xhtml
+++ b/example-web-jsf-servlet/src/main/webapp/stylesheets/simpleTemplate.xhtml
@@ -8,7 +8,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.prime.com.tr/ui">
 <f:view locale="#{sessionController.locale}">
-	<t:htmlTag value="head">
+	<h:head>
 		<title><h:outputText value="#{applicationService.name}" /></title>
 		<ui:repeat value="#{tagsConfigurator.stylesheets}" var="path">
 			<t:stylesheet path="#{path}" />
@@ -16,33 +16,25 @@
 		<ui:repeat value="#{tagsConfigurator.scripts}" var="path">
 			<script type="text/javascript" src="#{path}" />
 		</ui:repeat>
-	</t:htmlTag>
-	<t:htmlTag value="body" styleClass="fl-theme-app">
+		<h:outputScript name="jsf.js" library="javax.faces" target="head" />
+	</h:head>
+	<h:body styleClass="fl-theme-app">
 		<ui:include src="_include/_header.xhtml" />
-		<t:div id="welcomepages">
-			<t:div id="navigationHeader" styleClass="app-pagebar">
-				<h:form id="nav_header" styleClass="app-form" />
-			</t:div>
-			<t:div styleClass="app-body">
-				<t:div styleClass="app-navigation">
-				</t:div>
-				<t:div styleClass="app-content">
-					<t:htmlTag value="br" />
-					<ui:insert name="allContent" />
-				</t:div>
-				<t:div style="clear:both;" />
-			</t:div>
-			<t:div id="navigationFooter"
-				styleClass="fl-container-flex app-pagebar">
-				<h:form id="nav_footer" styleClass="app-form" />
-			</t:div>
-		</t:div>
+		<div id="body">
+			<div class="app-body">
+				<ui:insert name="navigation" />
+				
+				<div class="app-content"><br />
+				<ui:insert name="content" /></div>
+				<div style="clear: both;" />
+			</div>
+		</div>
 		<t:div styleClass="app-footer">
 			<h:outputText value="#{applicationService.name} " />
 			<h:outputText value="v#{applicationService.version} - " />
 			<h:outputText value="#{applicationService.copyright}" />
 		</t:div>
-	</t:htmlTag>
+	</h:body>
 </f:view>
 
 </html>
