--- a/blank-web-jsf-servlet/src/main/webapp/stylesheets/welcome.xhtml
+++ b/blank-web-jsf-servlet/src/main/webapp/stylesheets/welcome.xhtml
@@ -9,9 +9,7 @@
 	xmlns:e="http://commons.esup-portail.org"
 	template="/stylesheets/template.xhtml">
 	<ui:define name="content">
-		<e:section value="#{msgs['CAS_DEMO.TITLE']}" />
-		<h:outputText
-			value="#{msgs['CURRENT.USER']} TOTO" />
+		<e:section value="#{msgs['BLANK.WELCOME']}" />
 	</ui:define>
 </ui:composition>
 
