--- a/blank-web-jsf-servlet/src/main/webapp/stylesheets/welcome.xhtml
+++ b/blank-web-jsf-servlet/src/main/webapp/stylesheets/welcome.xhtml
@@ -8,8 +8,79 @@
 	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:e="http://commons.esup-portail.org"
 	template="/stylesheets/template.xhtml">
+	<ui:define name="navigation">
+		<p:menubar>
+			<p:submenu icon="ui-icon ui-icon-info" >
+				<p:menuitem value="About This Blank" url="#" onclick="info.show();"></p:menuitem>
+			</p:submenu>
+
+			<p:submenu label="Finder">
+				<p:menuitem value="Exemple" onclick="demo.show();" url="#" ></p:menuitem>
+			</p:submenu>
+
+			<p:submenu label="Edit">
+				<p:menuitem value="Undo" url="#"  onclick="demo.show();" helpText="⌘Z"></p:menuitem>
+				<p:menuitem value="Redo" url="#"  onclick="demo.show();" helpText="⌘Y"></p:menuitem>
+			</p:submenu>
+
+			<p:submenu label="View">
+				<p:menuitem value="Source" url="#" onclick="demo.show();"></p:menuitem>
+			</p:submenu>
+		</p:menubar>
+	</ui:define>
 	<ui:define name="content">
-		<e:section value="#{msgs['BLANK.WELCOME']}" />
+
+		<p:growl showDetail="true"/>
+		<p:dialog header="About This Blank application" draggable="true"
+			widgetVar="info" showEffect="fade" hideEffect="fade" width="400">
+			<h:form>
+				<h:panelGrid columns="1" style="width:100%;text-align:center;">
+					<p:graphicImage value="/media/images/esup.png" />
+					<h:outputText value="#{applicationService.name}"
+						style="font-size:16px" />
+					<h:outputText value="Version #{applicationService.version}" />
+					<h:outputText value="#{applicationService.copyright}" />
+				</h:panelGrid>
+				<br/>
+				<h:panelGrid columns="2">
+					<h:outputText value="Auteur" style="font-weight:bold" />
+					<h:outputText value="Leproust Cédric" />
+
+					<h:outputText value="Consortium" style="font-weight:bold" />
+					<h:outputText value="Esup portail" />
+
+				</h:panelGrid>
+
+			</h:form>
+		</p:dialog>
+
+		<p:dialog header="#{applicationService.name}" modal="true"
+			showEffect="fade" resizable="false" visible="true" width="400"
+			widgetVar="welcome">
+			<h:outputText value="#{msgs['BLANK.WELCOME']}" />
+		</p:dialog>
+		
+		<p:dialog header="Demo" 
+			showEffect="fade" resizable="true" 
+			widgetVar="demo">
+			<h:outputText value="Ces menus sont disponibles que pour une démonstration." />
+		</p:dialog>
+
+		<p:dock>
+			<p:menuitem label="Finder" icon="/media/images/finder.png" url="#"
+				onclick="info.show();" />
+			<p:menuitem label="Terminal" icon="/media/images/terminal.png"
+				url="#" onclick="welcome.show();" />
+		</p:dock>
+		<script type="text/javascript">
+	jQuery(function() {
+		jQuery.gritter
+				.add({
+					title : 'Software Update',
+					text : 'New version of iTunes is available',
+					image : '/blank-web-jsf-servlet/javax.faces.resource/growl/assets/info.png.xhtml?ln=primefaces&amp;v=2.2'
+				});
+	});
+</script>
 	</ui:define>
 </ui:composition>
-
