--- a/blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/menu.xhtml
+++ b/blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/menu.xhtml
@@ -29,7 +29,7 @@
 				target="#{sessionController.action}" />
 		</tr:commandNavigationItem>
 		<tr:commandNavigationItem text="#{msgs['LOGIN.TEXT']}"
-			destination="/stylesheets/protected/login.jsf"
+			destination="/stylesheets/protected/login.xhtml"
 			rendered="#{sessionController.loginEnable}" />
 		<tr:commandNavigationItem text="#{msgs['LOGOUT.TEXT']}"
 			action="#{sessionController.logoutAction}" immediate="true"
