--- a/blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/welcome.xhtml
+++ b/blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/welcome.xhtml
@@ -26,7 +26,7 @@
                 </tr:commandLink></div>
                 <h:panelGroup rendered="#{sessionController.loginEnable}">
                     <div class="row"><tr:goLink text="#{msgs['LOGIN.TEXT']}"
-                        destination="/stylesheets/protected/m_login.jsf"
+                        destination="/stylesheets/protected/m_login.xhtml"
                         styleClass="centerMessageLink" /></div>
                 </h:panelGroup>
                 <h:panelGroup rendered="#{sessionController.logoutEnable}">
