--- a/blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/welcome.xhtml
+++ b/blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/welcome.xhtml
@@ -7,7 +7,7 @@
 			<tr:spacer height="20px" />
 			<tr:outputFormatted styleUsage="instruction"
 				value="&lt;b&gt;#{msgs['USER.TEXT']}:&lt;/b&gt; #{sessionController.currentUser.displayName} - #{msgs['ADMIN.TRUE.TEXT']} - #{msgs['PREFERENCES.LANGUAGE.SHORT_LABEL']}#{sessionController.currentUser.displayLanguage} - #{msgs['PREFERENCES.ACCESSIBILITY.SHORT_LABEL']}#{sessionController.currentUser.displayAccessibilityMode}"
-				rendered="#{not empty sessionController.currentUser2 and sessionController.currentUser.admin}" />
+				rendered="#{not empty sessionController.currentUser and sessionController.currentUser.admin}" />
 			<tr:outputFormatted styleUsage="instruction"
 				value="&lt;b&gt;#{msgs['USER.TEXT']}:&lt;/b&gt; #{sessionController.currentUser.displayName} - #{msgs['PREFERENCES.LANGUAGE.SHORT_LABEL']}#{sessionController.currentUser.displayLanguage} - #{msgs['PREFERENCES.ACCESSIBILITY.SHORT_LABEL']}#{sessionController.currentUser.displayAccessibilityMode}"
 				rendered="#{not empty sessionController.currentUser and not sessionController.currentUser.admin}" />
