--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/exceptions/template.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/exceptions/template.xhtml
@@ -3,6 +3,10 @@
 	xmlns:tr="http://myfaces.apache.org/trinidad"
 	locale="#{sessionController.locale}">
 	<tr:document title="#{msgs['BLANK.TEXT']}">
-		<ui:insert name="content" />
+		<tr:outputFormatted styleUsage="instruction"
+			value="&lt;b&gt;#{msgs['BLANK.TEXT']}. #{msgs['EXCEPTION.TITLE']}&lt;/b&gt;" />
+		<ui:insert name="exceptionDetailsButtons" />
+		<ui:insert name="exceptionForm" />
+		<ui:insert name="exceptionDetailsPanel" />
 	</tr:document>
 </f:view>
