--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/preferences.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/preferences.xhtml
@@ -4,34 +4,32 @@
 	xmlns:tr="http://myfaces.apache.org/trinidad" template="template.xhtml">
 	<ui:define name="content">
 		<tr:form id="changeLocale">
-			<tr:panelList styleClass="panelList">
-				<tr:outputFormatted styleUsage="instruction"
-					value="&lt;b&gt; #{msgs['PREFERENCES.LANGUAGE.LABEL']}: &lt;/b&gt;" />
-			</tr:panelList>
-			<tr:table value="#{preferencesController.localeItems}" var="language"
-				rows="5" width="100%" styleClass="iphoneTable"
-				horizontalGridVisible="false">
-				<tr:column inlineStyle="padding:0 !important;">
-					<tr:panelGroupLayout layout="vertical" styleClass="listing">
-						<tr:commandLink action="#{sessionController.setLocaleAction}"
-							inlineStyle="text-decoration:none;">
-							<f:setPropertyActionListener value="#{language.value}"
-								target="#{sessionController.languageSelected}" />
-							<h:graphicImage value="/media/images/accept.png"
-								style="float:left;border:0;margin-right:10px;"
-								alt="#{language.label}" title="#{language.label}"
-								rendered="#{language.value==sessionController.languageSelected}" />
-							<tr:outputText value="#{language.label}"
-								styleClass="centerMessageLink"
-								rendered="#{language.value!=sessionController.languageSelected}" />
-							<tr:outputText
-								value="#{language.label}"
-								styleClass="centerMessageText"
-								rendered="#{language.value==sessionController.languageSelected}" />
-						</tr:commandLink>
-					</tr:panelGroupLayout>
-				</tr:column>
-			</tr:table>
+			<div class="panelBase"><tr:panelCaptionGroup>
+				<div class="row"><tr:outputText styleClass="centerMessageText"
+					value="#{msgs['PREFERENCES.LANGUAGE.LABEL']}" /></div>
+
+				<tr:iterator value="#{preferencesController.localeItems}"
+					var="language" varStatus="row">
+
+					<div class="row"><tr:commandLink
+						action="#{sessionController.setLocaleAction}"
+						inlineStyle="text-decoration:none;">
+						<f:setPropertyActionListener value="#{language.value}"
+							target="#{sessionController.languageSelected}" />
+						<h:graphicImage value="/media/images/accept.png"
+							style="float:left;border:0;margin:10px;"
+							alt="#{language.label}" title="#{language.label}"
+							rendered="#{language.value==sessionController.languageSelected}" />
+						<tr:outputText value="#{language.label}"
+							styleClass="centerMessageLink"
+							rendered="#{language.value!=sessionController.languageSelected}" />
+						<tr:outputText value="#{language.label}"
+							styleClass="centerMessageText"
+							rendered="#{language.value==sessionController.languageSelected}" />
+					</tr:commandLink></div>
+				</tr:iterator>
+
+			</tr:panelCaptionGroup></div>
 		</tr:form>
 	</ui:define>
 </ui:composition>
