--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/template_exception.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/template_exception.xhtml
@@ -5,8 +5,7 @@
 	<tr:document title="#{msgs['BLANK.TEXT']}">
 		<tr:outputFormatted styleUsage="instruction"
 			value="&lt;b&gt;#{msgs['BLANK.TEXT']}. #{msgs['EXCEPTION.TITLE']}&lt;/b&gt;" />
-		<ui:insert name="exceptionDetailsButtons" />
-		<ui:insert name="exceptionForm" />
+		<ui:insert name="exceptionButtons" />
 		<ui:insert name="exceptionDetailsPanel" />
 	</tr:document>
 </f:view>
