--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/template_exception.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/template_exception.xhtml
@@ -5,7 +5,6 @@
 	<tr:document title="#{msgs['BLANK.TEXT']}">
 		<ui:include src="facet.xhtml" />
 		<ui:include src="menu.xhtml" />
-		<ui:insert name="exceptionButtons" />
-		<ui:insert name="exceptionDetailsPanel" />
+		<ui:insert name="content" />
 	</tr:document>
 </f:view>
