--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/menu.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/mobile/menu.xhtml
@@ -3,7 +3,7 @@
 	<tr:panelHeader styleClass="toolbar" text="#{msgs['M_BLANK.TEXT']}">
 		<tr:commandLink styleClass="backButton" text="#{msgs['BACK.TEXT']}"
 			action="welcome"
-			rendered="#{not empty sessionController.action and sessionController.action!='welcome' and empty exceptionController.exceptionShortStackTrace}">
+			rendered="#{not empty sessionController.action and sessionController.action!='welcome' and sessionController.action!='exception'}">
 			<f:setPropertyActionListener value="welcome"
 				target="#{sessionController.action}" />
 		</tr:commandLink>
@@ -13,7 +13,8 @@
             and sessionController.action!='welcome' 
             and sessionController.action!='preferences' 
             and sessionController.action!='about' 
-            and sessionController.action!='help'}">
+            and sessionController.action!='help'
+            and sessionController.action!='exception'}">
 			<f:setPropertyActionListener value="welcome"
 				target="#{sessionController.action}" />
 		</tr:commandLink>
