Rendus Mobile. Passage portlet -> servlet. Les exceptions en mode portlet, ce n'est pas réglé (pas d'interception).

--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/template.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/template.xhtml
@@ -3,11 +3,11 @@
 	xmlns:tr="http://myfaces.apache.org/trinidad"
 	locale="#{sessionController.locale}">
 	<tr:document title="#{msgs['BLANK.TEXT']}">
-		<tr:group rendered="#{empty exceptionController.exceptionName}">
+		<tr:group rendered="#{not exceptionController.exception}">
 			<ui:include src="menu.xhtml" />
 			<ui:insert name="content" />
 		</tr:group>
-		<tr:group rendered="#{not empty exceptionController.exceptionName}">
+		<tr:group rendered="#{exceptionController.exception}">
 			<tr:form id="exceptionButtons">
 			<tr:commandButton text="#{msgs['EXCEPTION.BUTTON.RESTART']}"
 				id="restart" action="#{exceptionController.restart}" />
