--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/welcome.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/welcome.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:tr="http://myfaces.apache.org/trinidad" template="template.xhtml">
 	<ui:define name="content">
-		<h:panelGroup>
+		<tr:group>
 			<tr:spacer height="20px" />
 			<tr:outputFormatted styleUsage="instruction"
 				value="&lt;b&gt;#{msgs['USER.TEXT']}:&lt;/b&gt; #{sessionController.currentUser.displayName} - #{msgs['ADMIN.TRUE.TEXT']} - #{msgs['PREFERENCES.LANGUAGE.SHORT_LABEL']}#{sessionController.currentUser.displayLanguage} - #{msgs['PREFERENCES.ACCESSIBILITY.SHORT_LABEL']}#{sessionController.currentUser.displayAccessibilityMode}"
@@ -11,7 +11,7 @@
 			<tr:outputFormatted styleUsage="instruction"
 				value="&lt;b&gt;#{msgs['USER.TEXT']}:&lt;/b&gt; #{sessionController.currentUser.displayName} - #{msgs['PREFERENCES.LANGUAGE.SHORT_LABEL']}#{sessionController.currentUser.displayLanguage} - #{msgs['PREFERENCES.ACCESSIBILITY.SHORT_LABEL']}#{sessionController.currentUser.displayAccessibilityMode}"
 				rendered="#{not empty sessionController.currentUser and not sessionController.currentUser.admin}" />
-		</h:panelGroup>
+		</tr:group>
 		<tr:spacer height="20px" />
 		<tr:outputFormatted styleUsage="instruction"
 			value="&lt;b&gt;#{msgs['WELCOME.INTRO_1']}#{msgs['BLANK.TEXT']}#{msgs['WELCOME.INTRO_2']}&lt;/b&gt;" />
