--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/exception.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/exception.xhtml
@@ -16,7 +16,8 @@
 				rendered="#{sessionController.showExceptionDetails}" />
 			<tr:spacer height="20px" />
 			<tr:commandButton text="#{msgs['EXCEPTION.BUTTON.RESTART']}"
-				id="restart" action="#{exceptionController.restart}" />
+				id="restart" action="#{exceptionController.restart}"
+				rendered="#{not exceptionController.portletMode}" />
 		</tr:form>
 	</ui:define>
 	<ui:define name="exceptionDetailsPanel">
