--- a/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/welcome.xhtml
+++ b/esup-blank-web-jsf-mixed/src/main/webapp/stylesheets/desktop/welcome.xhtml
@@ -14,6 +14,6 @@
 		</tr:group>
 		<tr:spacer height="20px" />
 		<tr:outputFormatted styleUsage="instruction"
-			value="&lt;b&gt;#{msgs['WELCOME.INTRO_1']}#{msgs['BLANK.TEXT']}#{msgs['WELCOME.INTRO_2']}&lt;/b&gt;" />
+			value="&lt;b&gt;#{msgs['WELCOME.INTRO_1']}#{msgs['BLANK.TEXT']}#{msgs['WELCOME.INTRO_2']}#{sessionController.version}#{msgs['WELCOME.INTRO_3']}&lt;/b&gt;" />
 	</ui:define>
 </ui:composition>
