--- a/example-web-jsf-servlet/src/main/izpack/config/jar/Info.html
+++ b/example-web-jsf-servlet/src/main/izpack/config/jar/Info.html
@@ -8,5 +8,6 @@
 <body>
 <h1>Example !</h1>
 <p>Ceci est un exemple de programme d'installation d'une application Example.</p> 
+<p>Une fois l'installation terminée, cliquez sur le fichier lisezmoi dans les raccourcis et suivez les instructions.</p> 
 </body>
 </html>
